Fixed the border and spacing of the login page

--- a/src/App.css
+++ b/src/App.css
@@ -171,11 +171,13 @@ form{
 
 
 form input {
-    width: 250px;
-    height: 40px;
-    border: none;
+    width: 300px;
+    height: 60px;
+    border: solid 1px #885D4D;
     outline: none;
     color: rgb(14, 12, 12);
+    font-size: 15px;
+    padding-left: 10px;
 }
 
 .search-btn {
@@ -355,11 +357,11 @@ button2 {
 
 .submit {
 	background-color:#885D4D;
-	border-radius:28px;
+	border-radius:20px;
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
-	padding:16px 31px;
+	padding:5px 31px;
 	text-decoration:none;
     width: 300px;
     margin-bottom: 8px;
